# local_llm

./: .env.example  .gitignore  AGENT_RULES.md  AUTONOMOUS_TRADING_GUIDE.md  CLAUDE.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  INFINITE_IMPROVEMENT.md  Makefile  PROGRESS_SUMMARY.md  README.md  RETRIEVAL_DESIGN.md  RETRIEVAL_EXAMPLES.md  RULES_ENGINE.md  RUN_INFINITE.sh  SELF_IMPROVING_SYSTEM.md  STARTUP.md  STATUS.md  TESTING.md  agent.py  config.py  config_manager.py  failing_test.py  improve.py  infinite_improve.py  logger.py  memory.py  missing_import.py  monitor.py  pyproject.toml  pytest.ini  reflection.py  requirements-turboquant.txt  requirements.txt  run.sh  run_improvement_cycles.sh  self_improve.py  setup.py  skill_tree.py  (+2 more)
.claude/: settings.json
agent_outputs/: .history.json  .stream_history.txt  code_validator.py  decision_maker.py  error_recovery.py  loop_detector.py  markets.py  memory_compressor.py  result_evaluator.py  task_planner.py
config/: model_config.yaml  rules.yaml
docs/: ARCHITECTURE.md
examples/: research_example.py  rules_engine_usage.py
run_output_data/: controller_policy.json  controller_state.json  history.json  improve_session.jsonl  skill_tree.db
runs/: history.json  skill_tree.db  skill_tree.db-shm  skill_tree.db-wal
scripts/: __init__.py  agent.py  monetize.py  run_trader.py  validate.py
skills/: __init__.py  code_validator.py  confidence_scorer.py  error_recovery.py  loop_detector.py  memory_compressor.py  metrics.py  orchestrator.py  result_evaluator.py  search_cache.py  self_evaluator.py  smart_router.py  strategy_learner.py  task_planner.py  tree_proposals.txt
src/: __init__.py  agent.py  config.py  context_manager.py  logger.py  memory.py  paths.py  skill_tree.py  write_guard.py
tests/: QUICK_REFERENCE.md  README.md  __init__.py  conftest.py  test_agent.py  test_context_budget.py  test_controller_contracts.py  test_improve_loop_recovery.py  test_improve_runner.py  test_integration.py  test_memory.py  test_mlx_adapter.py  test_prompt_builder.py  test_repo_bootstrap.py  test_retrieval.py  test_rules.py  test_runtime_support.py  test_runtime_task_state.py  test_tool_call_parser.py  (+4 more)
(+111 files in other folders)
