[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-research-agent"
version = "0.1.0"
description = "Local autonomous research agent with self-improving rules"
requires-python = ">=3.11"
authors = [
    {name = "Nicholas Antoniades", email = "nicholas@example.com"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "langchain-community==0.3.5",
    "langgraph==0.2.19",
    "langchain==0.3.5",
    "ollama==0.4.1",
    "mlx-lm==0.19.0",
    "lancedb==0.13.0",
    "pyarrow==17.0.0",
    "pydantic==2.8.0",
    "httpx==0.27.0",
    "aiohttp==3.10.0",
    "structlog==24.4.0",
    "pyyaml==6.0.1",
    "rank-bm25==0.2.2",
    "sentence-transformers==3.0.1",
    "tavily-python==0.5.0",
    "jinja2==3.1.2",
    "dspy-ai==2.5.1",
    "python-dotenv==1.0.0",
    "uvloop==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==4.0.0",
    "black==23.12.0",
    "ruff==0.1.0",
    "mypy==1.7.0",
]

[project.urls]
Homepage = "https://github.com/nicholasantoniades/local_llm"
Repository = "https://github.com/nicholasantoniades/local_llm"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "asyncio: async tests",
    "integration: integration tests",
    "slow: slow tests",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
